--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   curved_navigation_bar: ^1.0.4
   convex_bottom_bar: ^3.2.0
   awesome_dialog: ^3.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
