--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   awesome_dialog: ^3.2.1
   intl: ^0.19.0
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
